# guchho

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: CompilerWarnings.cmake  Packaging.cmake
include/: context.hpp  logger.hpp  version.hpp
include/api_helpers/: api_helpers.hpp
include/bundle/: bundle_writer.hpp  emitter.hpp  source_map.hpp
include/bundler/: bundler.hpp
include/cache/: cache.hpp
include/cli/: cli.hpp  command.hpp
include/cli_helpers/: cli_helpers.hpp
include/compat/: compat.hpp
include/config/: config.hpp  loader.hpp  validator.hpp
include/css_lexer/: css_lexer.hpp
include/css_parser/: css_parser.hpp
include/css_printer/: css_printer.hpp
include/dev/: dev_server.hpp  watcher.hpp
include/fs/: fs.hpp
include/graph/: chunk.hpp  dependency_graph.hpp  module.hpp
include/helpers/: helpers.hpp
include/html/: html_ast.hpp  html_lexer.hpp  html_parser.hpp
include/js_ast/: js_ast_expr.hpp  js_ast_fwd.hpp  js_ast_scope.hpp  js_ast_stmt.hpp  js_lexer_token.hpp
include/js_lexer/: js_lexer.hpp
include/js_parser/: global_name_parser.hpp  js_parser.hpp  js_parser_lower.hpp  json_parser.hpp  sourcemap_parser.hpp  ts_parser.hpp
include/js_printer/: js_printer.hpp
include/linker/: linker.hpp
include/logger/: logger.hpp
include/optimizer/: minifier.hpp  optimizer.hpp  tree_shaking.hpp
include/parser/css/: parser.hpp  token.hpp  tokenizer.hpp
include/parser/html/: ast.hpp  parser.hpp  token.hpp  tokenizer.hpp
include/parser/js/: parser.hpp  token.hpp  tokenizer.hpp
include/plugin/: plugin.hpp  plugin_manager.hpp
include/renamer/: renamer.hpp
include/resolver/: filesystem.hpp  module_resolver.hpp
include/runtime/: runtime.hpp
include/sourcemap/: sourcemap.hpp
include/transform/: javascript.hpp  transformer.hpp
include/utils/: filesystem.hpp
include/xxhash/: xxhash.hpp
npm/: install.js  package.json
npm/lib/: index.d.ts  index.js  platform.js
scripts/: build.sh  format.sh  lint.sh  publish.sh  test.sh
src/: CMakeLists.txt  context.cpp  main.cpp
src/api_helpers/: api_helpers.cpp
src/bundle/: bundle_writer.cpp  emitter.cpp  source_map.cpp
src/bundler/: bundler.cpp
src/cache/: cache.cpp
src/cli/: cli.cpp  command.cpp
src/cli_helpers/: cli_helpers.cpp
src/compat/: compat.cpp
src/config/: loader.cpp  validator.cpp
src/css_lexer/: css_lexer.cpp
src/css_parser/: css_parser.cpp
src/css_printer/: css_printer.cpp
src/dev/: dev_server.cpp  watcher.cpp
src/entry/: entry_manager.cpp  html_entry.cpp  js_entry.cpp  ts_entry.cpp
src/fs/: fs.cpp
src/graph/: chunk.cpp  dependency_graph.cpp  module.cpp
src/helpers/: helpers.cpp
src/html/: html_ast.cpp  html_lexer.cpp  html_parser.cpp
src/js_lexer/: js_lexer.cpp
src/js_parser/: global_name_parser.cpp  js_parser.cpp  js_parser_lower.cpp  js_parser_lower_class.cpp  json_parser.cpp  sourcemap_parser.cpp  ts_parser.cpp
src/js_printer/: js_printer.cpp
src/linker/: linker.cpp
src/logger/: logger.cpp
src/optimizer/: minifier.cpp  optimizer.cpp  tree_shaking.cpp
src/parser/css/: parser.cpp  tokenizer.cpp
src/parser/html/: ast.cpp  parser.cpp  tokenizer.cpp
src/parser/js/: parser.cpp  tokenizer.cpp
src/plugin/: plugin.cpp  plugin_manager.cpp
src/renamer/: renamer.cpp
src/resolver/: filesystem.cpp  module_resolver.cpp
src/runtime/: runtime.cpp
src/sourcemap/: sourcemap.cpp
src/transform/: javascript.cpp  transformer.cpp
src/utils/: filesystem.cpp  logger.cpp
src/xxhash/: xxhash.cpp
tests/: CMakeLists.txt
tests/cpp/bundle/: bundle_test.cpp
tests/cpp/cli/: cli_test.cpp  command_test.cpp
tests/cpp/config/: config_test.cpp
tests/cpp/graph/: graph_test.cpp
tests/cpp/optimizer/: optimizer_test.cpp
tests/cpp/parser/css/: parser_test.cpp
tests/cpp/parser/html/: parser_test.cpp
tests/cpp/parser/js/: parser_test.cpp
tests/cpp/resolver/: resolver_test.cpp
tests/cpp/transform/: transform_test.cpp
tests/cpp/utils/: utils_test.cpp
tests/fixtures/basic/: guchho.json
tests/fixtures/basic/src/: index.js
tests/fixtures/react/: guchho.json
tests/fixtures/vue/: guchho.json
tests/fixtures/vue/src/: App.vue
tests/js/api/: build.test.js  transform.test.js
tests/js/cli/: cli.test.js
tests/js/integration/: react.test.js  vue.test.js
